Fix spacing around the news feed
Refs pombase/website#2428

--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -102,11 +102,11 @@
 @media (min-width: 800px) {
   .quick-links {
     font-size: 120%;
-    padding-bottom: 0.3em;
+    padding-bottom: 1em;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 799px) {
   .quick-links {
     padding: 0.5em 0;
   }
@@ -195,7 +195,7 @@
   .front-news-feed {
     grid-column: 2 / 4;
     grid-row: 4 / 12;
-    padding-top: 2.5em;
+    padding: 2.5em;
   }
   .explore, .pombetalks {
     margin-left: auto;
@@ -237,15 +237,15 @@
     grid-gap: 0.5em 0.5em;
   }
   .welcome {
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
     grid-column: 1 / 2;
   }
   .quick-links {
-    grid-row: 3 / 4;
+    grid-row: 2 / 3;
     grid-column: 1 / 2;
   }
   .front-right {
-    grid-row: 2 / 4;
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
     min-width: 300px;
   }
@@ -257,9 +257,12 @@
     grid-column: 1 / 3;
   }
 }
-@media (max-width: 799px) {
+@media (max-width: 649px) {
   .front-news-feed {
     order: 99;
+  }
+  .welcome-logos {
+    padding: 0.5em 0 2em 0;
   }
 }
 
